--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     </header>
    <main>
     <!--HERO SECTION-->
-    <section class="hero-section">
+    <section class="hero-section section">
         <h1 class="solutions">Effective Solutions
         for Your Business</h1>
         <button type="button" class="button" id="button">Order Service</button>
     </section>
     <!--OUR BENEFITS-->
-    <section class="our-benefits">
+    <section class="our-benefits section">
         <h2 class="benefits">Our benefits</h2>
         <ul class="secondary-menu list">
             <li class="menu-item">
@@ -74,7 +74,7 @@
         </ul>
     </section>
     <!--Our Team-->
-    <section class="our-team">
+    <section class="our-team section">
         <h2 class="titel">Our Team</h2>
         <ul class="menu list">
             <li class="menu-item-team">
@@ -100,7 +100,7 @@
         </ul>
     </section>
     <!---Portfolio-->
-    <section class="portfolio">
+    <section class="portfolio section">
 <h3 class="title">Our Portfolio</h3>
 <ul class="menu list">
     <li>
@@ -137,9 +137,11 @@
     </section>
    </main> 
  <!--PAGE FOOTER-->
+ <div class="container">
     <footer class="footer">
         <a class="logo link" href="./index.html">Web<span class="logo-span-footer"> Studio</span></a>
         <p class="paragraf-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
+</div>
 </body>
 </html>
