--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!--PAGE HEADER-->
     <header class="page-header"> 
         <nav class="main-navigation">
+        <div class="container"></div>
             <a class="logo link" href="./index.html">Web<span class="logo-span"> Studio</span></a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -51,7 +52,8 @@
         <button type="button" class="button" id="button">Order Service</button>
     </section>
     <!--OUR BENEFITS-->
-    <section class="our-benefits section">
+    <section class="our-benefits">
+     <div class="container"></div>
         <h2 class="benefits">Our benefits</h2>
         <ul class="secondary-menu list">
             <li class="menu-item">
@@ -72,9 +74,11 @@
                 <p class="paragraf">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
+     </div>
     </section>
     <!--Our Team-->
     <section class="our-team section">
+        <div class="container">
         <h2 class="titel">Our Team</h2>
         <ul class="menu list">
             <li class="menu-item-team">
@@ -98,44 +102,47 @@
                 <p class="paragraf">UI Designer</p>
             </li>
         </ul>
+        </div>
     </section>
     <!---Portfolio-->
     <section class="portfolio section">
-<h3 class="title">Our Portfolio</h3>
-<ul class="menu list">
-    <li>
-        <img src="./images/banking-app.jpg" alt="banking app" width="360">
-        <h3 class="examples">Banking App</h3>
-        <p class="portfolio-para">App</p>
-    </li>
-    <li>
-        <img src="./images/cashless-payment.jpg" alt="cashless payment" width="360">
-        <h3 class="examples">Cashless Payment</h3>
-        <p class="portfolio-para">Marketing</p>
-    </li>
-    <li>
-        <img src="./images/meditation-app.jpg" alt="meditation app" width="360">
-        <h3 class="examples">Meditation App</h3>
-        <p class="portfolio-para">App</p>
-    </li>
-    <li>
-        <img src="./images/taxi-service.jpg" alt="taxi service" width="360">
-        <h3 class="examples">Taxi Service</h3>
-        <p class="portfolio-para">Marketing</p>
-    </li>
-    <li>
-        <img src="./images/screen-illustrations.jpg" alt="screen illustration" width="360">
-        <h3 class="examples">Screen Illustrations</h3>
-        <p class="portfolio-para">Design</p>
-    </li>
-    <li>
-        <img src="./images/online-courses.jpg" alt="online courses" width="360">
-        <h3 class="examples">Online Courses</h3>
-        <p class="portfolio-para">Marketing</p>
-    </li>
-</ul>
+        <div class="container">
+        <h3 class="title">Our Portfolio</h3>
+        <ul class="menu list">
+            <li>
+                <img src="./images/banking-app.jpg" alt="banking app" width="360">
+                <h3 class="examples">Banking App</h3>
+                <p class="portfolio-para">App</p>
+            </li>
+            <li>
+                <img src="./images/cashless-payment.jpg" alt="cashless payment" width="360">
+                <h3 class="examples">Cashless Payment</h3>
+                <p class="portfolio-para">Marketing</p>
+            </li>
+            <li>
+                <img src="./images/meditation-app.jpg" alt="meditation app" width="360">
+                <h3 class="examples">Meditation App</h3>
+                <p class="portfolio-para">App</p>
+            </li>
+            <li>
+                <img src="./images/taxi-service.jpg" alt="taxi service" width="360">
+                <h3 class="examples">Taxi Service</h3>
+                <p class="portfolio-para">Marketing</p>
+            </li>
+            <li>
+                <img src="./images/screen-illustrations.jpg" alt="screen illustration" width="360">
+                <h3 class="examples">Screen Illustrations</h3>
+                <p class="portfolio-para">Design</p>
+            </li>
+            <li>
+                <img src="./images/online-courses.jpg" alt="online courses" width="360">
+                <h3 class="examples">Online Courses</h3>
+                <p class="portfolio-para">Marketing</p>
+            </li>
+        </ul>
+        </div>
     </section>
-   </main> 
+</main> 
  <!--PAGE FOOTER-->
  <div class="container">
     <footer class="footer">
