--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
     </header>
    <main>
     <!--HERO SECTION-->
-    <section class="hero-section section">
+    <section class="hero-section">
+        <div class="container">
         <h1 class="solutions">Effective Solutions
         for Your Business</h1>
         <button type="button" class="button" id="button">Order Service</button>
+        </div>
     </section>
     <!--OUR BENEFITS-->
     <section class="our-benefits">
