--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--PAGE HEADER-->
     <header class="page-header"> 
         <nav class="main-navigation">
-        <div class="container"></div>
+        <div class="container">
             <a class="logo link" href="./index.html">Web<span class="logo-span"> Studio</span></a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -43,6 +43,7 @@
                 </li>
             </ul>
         </address>
+        </div>
     </header>
    <main>
     <!--HERO SECTION-->
