--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--PAGE HEADER-->
     <header class="page-header"> 
         <nav class="main-navigation">
-        <div class="container">
+          <div class="container">
             <a class="logo link" href="./index.html">Web<span class="logo-span"> Studio</span></a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -34,7 +34,7 @@
             </ul>
         </nav>   
         <address class="address">
-            <ul class="list">
+            <ul class="list address-list">
                 <li>
                     <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
@@ -147,11 +147,9 @@
     </section>
 </main> 
  <!--PAGE FOOTER-->
- <div class="container">
     <footer class="footer">
         <a class="logo link" href="./index.html">Web<span class="logo-span-footer"> Studio</span></a>
         <p class="paragraf-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
-</div>
 </body>
 </html>
