--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--PAGE HEADER-->
     <header class="page-header"> 
         <nav class="main-navigation">
-          <div class="container">
+        <div class="container">
             <a class="logo link" href="./index.html">Web<span class="logo-span"> Studio</span></a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -32,6 +32,7 @@
                 </li>
                 
             </ul>
+        </div>
         </nav>   
         <address class="address">
             <ul class="list address-list">
@@ -43,32 +44,31 @@
                 </li>
             </ul>
         </address>
-        </div>
     </header>
    <main>
     <!--HERO SECTION-->
     <section class="hero-section">
         <div class="container">
-        <h1 class="solutions">Effective Solutions
-        for Your Business</h1>
-        <button type="button" class="button" id="button">Order Service</button>
+            <h1 class="solutions">Effective Solutions
+            for Your Business</h1>
+            <button type="button" class="button" id="button">Order Service</button>
         </div>
     </section>
     <!--OUR BENEFITS-->
     <section class="our-benefits">
-     <div class="container"></div>
+     <div class="container">
         <h2 class="benefits">Our benefits</h2>
         <ul class="secondary-menu list">
-            <li class="menu-item">
+            <li class="menu-item-benefits">
                 <h3 class="menu-item-titel">Strategy</h3>
                 <p class="paragraf">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li class="menu-item">
+            <li class="menu-item-benefits">
                 <h3 class="menu-item-titel">Punctuality</h3>
                 <p class="paragraf">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li class="menu-item">
+            <li class="menu-item-benefits">
                 <h3 class="menu-item-titel">Diligence</h3>
                 <p class="paragraf">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
@@ -109,15 +109,17 @@
     </section>
     <!---Portfolio-->
     <section class="portfolio section">
-        <div class="container">
+    <div class="container">
         <h3 class="title">Our Portfolio</h3>
-        <ul class="menu list">
-            <li>
-                <img src="./images/banking-app.jpg" alt="banking app" width="360">
-                <h3 class="examples">Banking App</h3>
-                <p class="portfolio-para">App</p>
+        <ul class="menu-portfolio list">
+            <li class="portfolio-item">
+                <div class="container-portfolio">
+                    <img src="./images/banking-app.jpg" alt="banking app" width="360">
+                    <h3 class="examples">Banking App</h3>
+                    <p class="portfolio-para">App</p>
+                </div>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/cashless-payment.jpg" alt="cashless payment" width="360">
                 <h3 class="examples">Cashless Payment</h3>
                 <p class="portfolio-para">Marketing</p>
@@ -127,17 +129,17 @@
                 <h3 class="examples">Meditation App</h3>
                 <p class="portfolio-para">App</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/taxi-service.jpg" alt="taxi service" width="360">
                 <h3 class="examples">Taxi Service</h3>
                 <p class="portfolio-para">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/screen-illustrations.jpg" alt="screen illustration" width="360">
                 <h3 class="examples">Screen Illustrations</h3>
                 <p class="portfolio-para">Design</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/online-courses.jpg" alt="online courses" width="360">
                 <h3 class="examples">Online Courses</h3>
                 <p class="portfolio-para">Marketing</p>
@@ -148,8 +150,10 @@
 </main> 
  <!--PAGE FOOTER-->
     <footer class="footer">
-        <a class="logo link" href="./index.html">Web<span class="logo-span-footer"> Studio</span></a>
-        <p class="paragraf-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container">
+            <a class="logo-footer link" href="./index.html">Web<span class="logo-span-footer"> Studio</span></a>
+            <p class="paragraf-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 </html>
