--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <!--PAGE HEADER-->
     <header class="page-header"> 
-        <nav class="main-navigation">
         <div class="container">
+            <nav class="main-navigation container">
             <a class="logo link" href="./index.html">Web<span class="logo-span"> Studio</span></a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -32,9 +32,9 @@
                 </li>
                 
             </ul>
+            </nav> 
         </div>
-        </nav>   
-        <address class="address">
+        <address class="address container">
             <ul class="list address-list">
                 <li>
                     <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -72,7 +72,7 @@
                 <h3 class="menu-item-titel">Diligence</h3>
                 <p class="paragraf">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li class="menu-item">
+            <li class="menu-item-benefits">
                 <h3 class="menu-item-titel">Technologies</h3>
                 <p class="paragraf">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
@@ -110,7 +110,7 @@
     <!---Portfolio-->
     <section class="portfolio section">
     <div class="container">
-        <h3 class="title">Our Portfolio</h3>
+        <h2 class="title">Our Portfolio</h2>
         <ul class="menu-portfolio list">
             <li class="portfolio-item">
                 <div class="container-portfolio">
