--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!--OUR BENEFITS-->
     <section class="our-benefits">
      <div class="container">
-        <h2 class="benefits">Our benefits</h2>
+        <h2 class="visually-hidden">Our benefits</h2>
         <ul class="secondary-menu list">
             <li class="menu-item-benefits">
                 <h3 class="menu-item-titel">Strategy</h3>
@@ -82,7 +82,7 @@
     <!--Our Team-->
     <section class="our-team section">
         <div class="container">
-        <h2 class="titel">Our Team</h2>
+        <h2 class="title">Our Team</h2>
         <ul class="menu list">
             <li class="menu-item-team">
                 <img src="./images/img.jpg" alt="Picture of Mark Guerrero " width="264" height="260">
