--- a/index.html
+++ b/index.html
@@ -121,36 +121,46 @@
         <h2 class="title">Our Portfolio</h2>
         <ul class="menu-portfolio list">
             <li class="portfolio-item">
+                <img src="./images/banking-app.jpg" alt="banking app" width="360">
                 <div class="container-portfolio">
-                    <img src="./images/banking-app.jpg" alt="banking app" width="360">
                     <h3 class="examples">Banking App</h3>
                     <p class="portfolio-para">App</p>
                 </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/cashless-payment.jpg" alt="cashless payment" width="360">
-                <h3 class="examples">Cashless Payment</h3>
-                <p class="portfolio-para">Marketing</p>
+                <div class="container-portfolio">
+                    <h3 class="examples">Cashless Payment</h3>
+                    <p class="portfolio-para">Marketing</p>
+                </div>
             </li>
             <li>
                 <img src="./images/meditation-app.jpg" alt="meditation app" width="360">
-                <h3 class="examples">Meditation App</h3>
-                <p class="portfolio-para">App</p>
+                <div class="container-portfolio">
+                    <h3 class="examples">Meditation App</h3>
+                    <p class="portfolio-para">App</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/taxi-service.jpg" alt="taxi service" width="360">
-                <h3 class="examples">Taxi Service</h3>
-                <p class="portfolio-para">Marketing</p>
+                <div class="container-portfolio">
+                    <h3 class="examples">Taxi Service</h3>
+                    <p class="portfolio-para">Marketing</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/screen-illustrations.jpg" alt="screen illustration" width="360">
-                <h3 class="examples">Screen Illustrations</h3>
-                <p class="portfolio-para">Design</p>
+                <div class="container-portfolio">
+                    <h3 class="examples">Screen Illustrations</h3>
+                    <p class="portfolio-para">Design</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/online-courses.jpg" alt="online courses" width="360">
-                <h3 class="examples">Online Courses</h3>
-                <p class="portfolio-para">Marketing</p>
+                <div class="container-portfolio">
+                    <h3 class="examples">Online Courses</h3>
+                    <p class="portfolio-para">Marketing</p>
+                </div>
             </li>
         </ul>
         </div>
