--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
                 
             </ul>
             </nav> 
+        
+            <address class="address container">
+                <ul class="list address-list">
+                    <li>
+                        <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
         </div>
-        <address class="address container">
-            <ul class="list address-list">
-                <li>
-                    <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
     </header>
    <main>
     <!--HERO SECTION-->
@@ -134,7 +135,7 @@
                     <p class="portfolio-para">Marketing</p>
                 </div>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/meditation-app.jpg" alt="meditation app" width="360">
                 <div class="container-portfolio">
                     <h3 class="examples">Meditation App</h3>
