--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!--PAGE HEADER-->
     <header class="page-header"> 
-        <div class="container">
+        <div class="container header-container">
             <nav class="main-navigation container">
             <a class="logo link" href="./index.html">Web<span class="logo-span"> Studio</span></a>
             <ul class="menu list">
@@ -34,7 +34,7 @@
             </ul>
             </nav> 
         
-            <address class="address container">
+            <address class="address">
                 <ul class="list address-list">
                     <li>
                         <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
