--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section class="our-team section">
         <div class="container">
         <h2 class="title">Our Team</h2>
-        <ul class="menu list">
+        <ul class="menu-team list">
             <li class="menu-item-team">
                 <img src="./images/img.jpg" alt="Picture of Mark Guerrero " width="264" height="260">
                 <div class="container-team">
